sdk/rootfs/src/open_src/OStrongswan/src/src/libstrongswan/settings/settings_parser.output
State 11 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce


Grammar

    0 $accept: statements $end

    1 statements: %empty
    2           | statements NEWLINE
    3           | statements statement

    4 statement: section
    5          | setting

    6 section: section_start statements '}'

    7 section_start: NAME '{'
    8              | NAME NEWLINE '{'

    9 setting: NAME '=' value
   10        | NAME '='

   11 value: valuepart
   12      | value valuepart

   13 valuepart: NAME
   14          | STRING


Terminals, with rules where they appear

$end (0) 0
'=' (61) 9 10
'{' (123) 7 8
'}' (125) 6
error (256)
NAME (258) 7 8 9 10 13
STRING (259) 14
NEWLINE (260) 2 8


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
statements (10)
    on left: 1 2 3, on right: 0 2 3 6
statement (11)
    on left: 4 5, on right: 3
section (12)
    on left: 6, on right: 4
section_start (13)
    on left: 7 8, on right: 6
setting (14)
    on left: 9 10, on right: 5
value (15)
    on left: 11 12, on right: 9 12
valuepart (16)
    on left: 13 14, on right: 11 12


State 0

    0 $accept: . statements $end

    $default  reduce using rule 1 (statements)

    statements  go to state 1


State 1

    0 $accept: statements . $end
    2 statements: statements . NEWLINE
    3           | statements . statement

    $end     shift, and go to state 2
    NAME     shift, and go to state 3
    NEWLINE  shift, and go to state 4

    statement      go to state 5
    section        go to state 6
    section_start  go to state 7
    setting        go to state 8


State 2

    0 $accept: statements $end .

    $default  accept


State 3

    7 section_start: NAME . '{'
    8              | NAME . NEWLINE '{'
    9 setting: NAME . '=' value
   10        | NAME . '='

    NEWLINE  shift, and go to state 9
    '{'      shift, and go to state 10
    '='      shift, and go to state 11


State 4

    2 statements: statements NEWLINE .

    $default  reduce using rule 2 (statements)


State 5

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 6

    4 statement: section .

    $default  reduce using rule 4 (statement)


State 7

    6 section: section_start . statements '}'

    $default  reduce using rule 1 (statements)

    statements  go to state 12


State 8

    5 statement: setting .

    $default  reduce using rule 5 (statement)


State 9

    8 section_start: NAME NEWLINE . '{'

    '{'  shift, and go to state 13


State 10

    7 section_start: NAME '{' .

    $default  reduce using rule 7 (section_start)


State 11

    9 setting: NAME '=' . value
   10        | NAME '=' .

    NAME    shift, and go to state 14
    STRING  shift, and go to state 15

    NAME      [reduce using rule 10 (setting)]
    $default  reduce using rule 10 (setting)

    value      go to state 16
    valuepart  go to state 17


State 12

    2 statements: statements . NEWLINE
    3           | statements . statement
    6 section: section_start statements . '}'

    NAME     shift, and go to state 3
    NEWLINE  shift, and go to state 4
    '}'      shift, and go to state 18

    statement      go to state 5
    section        go to state 6
    section_start  go to state 7
    setting        go to state 8


State 13

    8 section_start: NAME NEWLINE '{' .

    $default  reduce using rule 8 (section_start)


State 14

   13 valuepart: NAME .

    $default  reduce using rule 13 (valuepart)


State 15

   14 valuepart: STRING .

    $default  reduce using rule 14 (valuepart)


State 16

    9 setting: NAME '=' value .
   12 value: value . valuepart

    NAME    shift, and go to state 14
    STRING  shift, and go to state 15

    NAME      [reduce using rule 9 (setting)]
    $default  reduce using rule 9 (setting)

    valuepart  go to state 19


State 17

   11 value: valuepart .

    $default  reduce using rule 11 (value)


State 18

    6 section: section_start statements '}' .

    $default  reduce using rule 6 (section)


State 19

   12 value: value valuepart .

    $default  reduce using rule 12 (value)
